Fix background on firefox

--- a/app/styles/components/_background.scss
+++ b/app/styles/components/_background.scss
@@ -14,11 +14,11 @@
 .BackgroundColumn{
   width: 100%;
   background-size: cover;
-  background-position-x: 0%;
+  background-position: 0%;
 }
 
 .BackgroundColumn--rightAlign {
-  background-position-x: 100%;
+  background-position: 100%;
 };
 
 .BackgroundColumn--blue {
